--- a/src/app/components/product-update/product-update.component.html
+++ b/src/app/components/product-update/product-update.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col-12">
-            <h1>Create new product</h1>
+            <h1>Update product</h1>
         </div>
     </div>
     <div class="row">
